View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027557 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-06-01 11:13 | 2016-12-09 16:37 |
Reporter | msv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027557: Unstable HLR tests | ||||
Description | The fix for bug 27341 contains a group of new test cases "bugs modalg_6 bug27341*" that give different results on different versions of compiler, VC 2010 and VC 2013. Failed tests on VC 2010 32 bit: bugs modalg_6 bug27341_103 bugs modalg_6 bug27341_307 bugs modalg_6 bug27341_314 bugs modalg_6 bug27341_315 bugs modalg_6 bug27341_322 Failed tests on VC 2013 64 bit: bugs modalg_6 bug27341_102 bugs modalg_6 bug27341_103 bugs modalg_6 bug27341_318 | ||||
Steps To Reproduce | test bugs modalg_6 bug27341* | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug25908, bug27341_102 - bug27341_103, bug27341_301 - bug27341_320, bug27341_322 - bug27341_324, bug27341_326 - bug27341_329 | ||||
|
On my workstation only "VC 2010 32 bit" problems can be reproduced. |
|
Branch CR27557 has been created by jgv. SHA-1: 7e1ae0c4d7d931837ab587467c5084b981653102 Detailed log of new commits: Author: jgv Date: Mon Jun 6 18:58:40 2016 +0300 0027557: Unstable HLR tests The following modifications were done for stability: - Precision::PConfusion() was set as parameter of Classifier instead of 0.0 - Coinciding vertices of outlines are united to exclude neighborhood of common vertex from curve-curve intersection - Draw command "hlrin3d" was modified to prevent exception |
|
Please review the branch CR27557. |
|
src\HLRTopoBRep\HLRTopoBRep_DSFiller.cxx - It is not good solution to compute all distances between vertices using 4 nested loops. It will probably bring significant performance degradation on large models. Instead, it is needed to use some one-pass solution. E.g., use NCollection_CellFilter algorithm to detect coinciding vertices. - Line 486: distance between vertices must be compared with the sum of their tolerances. - Line 491: after putting the vertex to another edge it is needed to update its tolerance to ensure that its sphere covers the end point of the edge's curve. tests\bugs\modalg_6\bug27341_327 - Why the view orientation of this test case has been changed? - Tests "bugs modalg_6 bug27341*" need to be updated. I tried the fix and have got 28 failed cases of 44. |
|
Common note: use coding standard (http://dev.opencascade.org/doc/overview/html/occt_dev_guides__coding_rules.html#occt_coding_rules_2_3 [^]) for local variables names, like Ver etc. Instead, use aVertex. |
|
Branch CR27557 has been updated by jgv. SHA-1: 21869e3bed2bedbc7b473001a98c7a3be4417899 Detailed log of new commits: Author: jgv Date: Tue Jun 7 17:42:17 2016 +0300 Minor corrections |
|
Please review updated branch CR27557. |
|
Reviewed. |
|
Dear Mikhail, Please test the branch on all platforms and update the reference results for test group 27341. Please check identity of numbers of subshapes in the result on all platforms. |
|
Dear BugMaster, Branch CR27557 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 21869e3bed2bedbc7b473001a98c7a3be4417899 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 72 (72 on master) Windows: 4 (4 on master) MacOS : 1151 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR27557-master-OCCT/Debian70-64/summary.html#bugs-modalg_6 http://occt-tests/CR27557-master-OCCT/Windows-64-VC10/summary.html#bugs-modalg_6 bugs modalg_6 bug25908 bugs modalg_6 bug27341_102 - bug27341_103 bugs modalg_6 bug27341_301 - bug27341_320 bugs modalg_6 bug27341_322 - bug27341_324 bugs modalg_6 bug27341_326 - bug27341_329 Its are OK. Testing on Linux: occt component : Total MEMORY difference: 88770298 / 88551709 [+0.25%] Total CPU difference: 19248.599999999948 / 19686.87999999993 [-2.23%] products component : Total MEMORY difference: 27667978 / 27628608 [+0.14%] Total CPU difference: 5117.909999999982 / 5165.599999999994 [-0.92%] Testing on Windows: occt component : Total MEMORY difference: 55848899 / 55856511 [-0.01%] Total CPU difference: 18221.041600798835 / 18315.07900359886 [-0.51%] products component : Total MEMORY difference: 18749101 / 18714334 [+0.19%] Total CPU difference: 4994.746417399942 / 5029.363039299948 [-0.69%] There are following differences in images found by testdiff. http://occt-tests/CR27557-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10.html http://occt-tests/CR27557-master-OCCT/Debian70-64/diff-Debian70-64.html IMAGE bugs modalg_6 bug27341: bug27341_327.png differs |
|
Branch CR27557 has been updated by mkv. SHA-1: 4960da30f2c774567e44303117f5bed62112cefc Detailed log of new commits: Author: mkv Date: Wed Jun 8 16:19:24 2016 +0300 Corrections of test cases for issue CR27557 |
|
Dear BugMaster, following test cases are corrected and pushed to branch CR27557 of occt git-repository bugs modalg_6 bug25908 bugs modalg_6 bug27341_102 - bug27341_103 bugs modalg_6 bug27341_301 - bug27341_320 bugs modalg_6 bug27341_322 - bug27341_324 bugs modalg_6 bug27341_326 - bug27341_329 |
|
Dear jgv, Branch CR27557 has been rejected due to: - differences in images |
|
Change of picture in the case bug27341_327 is correct because of change of direction of view in this case. |
|
Dear BugMaster, Branch CR27557 is TESTED. |
|
Branch CR27557 has been deleted by inv. SHA-1: 4960da30f2c774567e44303117f5bed62112cefc |
occt: master 854e0d4a 2016-06-06 15:58:40 Committer: bugmaster Details Diff |
0027557: Unstable HLR tests The following modifications were done for stability: - Precision::PConfusion() was set as parameter of Classifier instead of 0.0 - Coinciding vertices of outlines are united to exclude neighborhood of common vertex from curve-curve intersection - Draw command "hlrin3d" was modified to prevent exception Minor corrections Corrections of test cases for issue CR27557 |
Affected Issues 0027557 |
|
mod - src/HLRBRep/HLRBRep_Data.cxx | Diff File | ||
mod - src/HLRTest/HLRTest.cxx | Diff File | ||
mod - src/HLRTopoBRep/HLRTopoBRep_DSFiller.cxx | Diff File | ||
mod - tests/bugs/modalg_6/bug25908 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_102 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_103 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_301 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_302 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_303 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_304 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_305 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_306 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_307 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_308 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_309 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_310 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_311 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_312 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_313 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_314 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_315 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_316 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_317 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_318 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_319 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_320 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_322 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_323 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_324 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_326 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_327 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_328 | Diff File | ||
mod - tests/bugs/modalg_6/bug27341_329 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-06-01 11:13 | msv | New Issue | |
2016-06-01 11:13 | msv | Assigned To | => msv |
2016-06-01 11:14 | msv | Assigned To | msv => |
2016-06-01 11:15 | msv | Assigned To | => aml |
2016-06-01 11:15 | msv | Status | new => assigned |
2016-06-01 13:12 | aml | Note Added: 0054596 | |
2016-06-01 13:12 | aml | Note Edited: 0054596 | |
2016-06-01 14:55 | msv | Assigned To | aml => jgv |
2016-06-06 18:58 | git | Note Added: 0054744 | |
2016-06-06 19:00 | jgv | Note Added: 0054745 | |
2016-06-06 19:00 | jgv | Assigned To | jgv => msv |
2016-06-06 19:00 | jgv | Status | assigned => resolved |
2016-06-07 12:15 | msv | Note Added: 0054762 | |
2016-06-07 12:15 | msv | Assigned To | msv => jgv |
2016-06-07 12:15 | msv | Status | resolved => assigned |
2016-06-07 14:23 | msv | Note Added: 0054765 | |
2016-06-07 17:42 | git | Note Added: 0054775 | |
2016-06-07 17:44 | jgv | Note Added: 0054776 | |
2016-06-07 17:44 | jgv | Assigned To | jgv => msv |
2016-06-07 17:44 | jgv | Status | assigned => resolved |
2016-06-07 18:08 | msv | Note Added: 0054780 | |
2016-06-07 18:08 | msv | Assigned To | msv => bugmaster |
2016-06-07 18:08 | msv | Status | resolved => reviewed |
2016-06-07 18:13 | jgv | Assigned To | bugmaster => mkv |
2016-06-07 18:16 | jgv | Note Added: 0054781 | |
2016-06-08 16:20 |
|
Note Added: 0054808 | |
2016-06-08 16:21 | git | Note Added: 0054809 | |
2016-06-08 16:21 |
|
Note Added: 0054810 | |
2016-06-08 16:21 |
|
Note Added: 0054811 | |
2016-06-08 16:21 |
|
Assigned To | mkv => jgv |
2016-06-08 16:21 |
|
Status | reviewed => feedback |
2016-06-08 16:22 |
|
Test case number | => bugs modalg_6 bug25908, bug27341_102 - bug27341_103, bug27341_301 - bug27341_320, bug27341_322 - bug27341_324, bug27341_326 - bug27341_329 |
2016-06-08 16:27 |
|
Note Edited: 0054808 | |
2016-06-08 16:29 | jgv | Assigned To | jgv => mkv |
2016-06-08 16:32 | jgv | Note Added: 0054813 | |
2016-06-08 16:35 |
|
Note Added: 0054814 | |
2016-06-08 16:35 |
|
Assigned To | mkv => bugmaster |
2016-06-08 16:35 |
|
Status | feedback => tested |
2016-06-10 13:12 | bugmaster | Changeset attached | => occt master 854e0d4a |
2016-06-10 13:12 | bugmaster | Status | tested => verified |
2016-06-10 13:12 | bugmaster | Resolution | open => fixed |
2016-06-17 12:14 | git | Note Added: 0055146 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |